--- a/main/res/layout/activity_book_list.xml
+++ b/main/res/layout/activity_book_list.xml
@@ -8,8 +8,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/disp"
-        android:layout_width="391dp"
-        android:layout_height="849dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="33dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
