--- a/main/res/layout/activity_add_book.xml
+++ b/main/res/layout/activity_add_book.xml
@@ -8,31 +8,31 @@
 
     <EditText
         android:id="@+id/inputBookName"
-        android:layout_width="245dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="42dp"
+        android:layout_width="0dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="60dp"
-        android:layout_marginEnd="140dp"
+        android:layout_marginEnd="165dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="在此键入书籍ISBN"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.562"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/search"
-        android:layout_width="99dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="281dp"
+        android:layout_width="68dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="309dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:text="查询"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -63,5 +63,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/scan"
+        android:layout_width="0dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="235dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="92dp"
+        android:text="扫码"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
